--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-    "name": "@gscrawley/date-lib",
-    "version": "1.0.0",
-    "description": "date library",
-    "main": "index.js",
-    "scripts": {
-      "test": "jest"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/gscrawley/date-lib.git"
-    },
-    "author": "Gideon Crawley",
-    "license": "ISC",
-    "bugs": {
-      "url": "https://github.com/gscrawley/date-lib/issues"
-    },
-    "homepage": "https://github.com/gscrawley/dateLib#readme"
-  }
+  "name": "@gscrawley/date-lib",
+  "version": "1.0.0",
+  "description": "date library",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gscrawley/date-lib.git"
+  },
+  "author": "Gideon Crawley",
+  "bugs": {
+    "url": "https://github.com/gscrawley/date-lib/issues"
+  },
+  "homepage": "https://github.com/gscrawley/dateLib#readme",
+  "license": "ISC"
+}
