--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "date library",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "jest": "^26.6.3"
   },
   "devDependencies": {
+    "coveralls": "^3.1.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1"
