--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "coveralls": "^3.1.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "rollup": "^2.33.3"
   }
 }
